<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sandwich Shop</string>
    <string name="sandwich">Sandwich</string>
    <string name="white">White</string>
    <string name="wheat">Wheate</string>
    <string name="rye">Rye</string>
    <string name="ketchup">Ketchup</string>
    <string name="jam">Jam</string>
    <string name="tomatoe">Tomato</string>
    <string name="order">Your Order</string>
    <string name="chili">Chili</string>
    <string name="mustard">Mustard</string>
    <string name="mayonnaise">Mayonnaise</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Place Order</string>
    <string name="number_order">Number of Orders</string>
    <string name="button_next">Take Order(s)</string>
    <string name="button_next_take">Take Next Order</string>
    <string name="total_orders">Orders</string>
    <string-array name="list_sandwich">
        <item>Tuna</item>
        <item>Ham</item>
        <item>Club</item>
    </string-array>

    <string-array name="count_sandwich">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>

